--- a/2.11-Exercise-WorkWithUnitTests/build.gradle
+++ b/2.11-Exercise-WorkWithUnitTests/build.gradle
@@ -6,10 +6,6 @@ provided, along with some unit tests. The project currently fails to build for
 a number of reasons. You will need to fix the project dependencies as well as
 the failing test.
 
-Exercises:
-
-1. Add a test dependency to the latest version of 'junit'.
-2. Run the provided unit tests.
 3. Use the test reports to identify the failing test. Modify the production
    code such that the failing test will pass.
 
@@ -19,4 +15,8 @@ apply plugin: 'java'
 
 repositories {
     mavenCentral()
+}
+
+dependencies {
+	testCompile group: 'junit', name: 'junit', version: '4.12'
 }
