--- a/2.13-Exercise-ConfigureTheGradleWrapper/build.gradle
+++ b/2.13-Exercise-ConfigureTheGradleWrapper/build.gradle
@@ -5,17 +5,8 @@ the Gradle wrapper. In this case you are given an empty project. You will use
 your installed version of Gradle to "bootstrap" this project by adding the
 wrapper files.
 
-Exercises:
-
-1. Run the 'wrapper' task to create the Gradle wrapper files.
-2. Use the wrapper to run the 'tasks' task.
-3. Configure the 'wrapper' task to use Gradle version 2.14.1.
-4. Use the wrapper with the '--version' option to confirm it is using
-   Gradle version 2.14.1.
-5. Modify the gradle-wrapper.properties file to use the latest Gradle
-   nightly build.
-
-Hint: For more information on using Gradle nightly builds, check out the
-Gradle website: http://gradle.org/gradle-nightly-build/
-
 */
+
+wrapper {
+	gradleVersion '4.9-20180624235932+0000'
+}
