--- a/3.05-Exercise-ConfigureBuildTypes/app/build.gradle
+++ b/3.05-Exercise-ConfigureBuildTypes/app/build.gradle
@@ -7,9 +7,6 @@ project.
 
 Exercises:
 
-1. Import the project into Android Studio.
-2. Build the project and deploy it onto a device (or emulator). Note the
-   application id shown on the main activity.
 3. Set the application id suffix for the 'debug' build type to 'debug.
 4. Rebuild your project and deploy it onto your device.
 5. Confirm that the application id shown includes the configured suffix.
@@ -20,13 +17,13 @@ Exercises:
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.udacity.gradle.buildtypes"
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -35,19 +32,14 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            applicationIdSuffix ".debug"
+            debuggable false
+        }
     }
 }
 
-/*
-
-To use our solution, uncomment the following line.
-
-*/
-
-// apply from:"solution.gradle"
-
-
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:24.1.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:27.1.1'
 }
