--- a/4.10-Exercise-SetUpUnitTesting/app/build.gradle
+++ b/4.10-Exercise-SetUpUnitTesting/app/build.gradle
@@ -1,28 +1,13 @@
-/*
-
-In this exercise you will set up unit tests and connected tests for a simple Android app.
-
-Exercises:
-
-    1. Set up unit tests that verify the initial count and increment methods of the ClickCounter class
-    2. Set up connected tests that test that clicking on the button actually increments the value displayed
-
-To complete the latter task, check out:
-
-    https://developer.android.com/training/testing/ui-testing/espresso-testing.html
-
-*/
-
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "24.0.3"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.example.android.clickcounter"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -36,10 +21,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    testImplementation 'junit:junit:4.12'
 }
