--- a/4.09-Demo-AndroidUnitTesting/gradle/wrapper/gradle-wrapper.properties
+++ b/4.09-Demo-AndroidUnitTesting/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Aug 17 10:55:39 PDT 2016
+#Fri Jul 13 23:28:21 EDT 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.4-all.zip
