--- a/3.09-Demo-Flavor-SpecificDependencies/app/build.gradle
+++ b/3.09-Demo-Flavor-SpecificDependencies/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.udacity.gradle.adsupported"
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -17,12 +17,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions "dim"
     productFlavors{
         free {
             applicationId "com.udacity.gradle.adsupported.free"
+            dimension "dim"
         }
         paid {
             applicationId "com.udacity.gradle.adsupported.paid"
+            dimension "dim"
         }
     }
 }
@@ -51,9 +55,9 @@ configurations are prefixed with.
 */
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:24.1.1'
-    freeCompile 'com.google.android.gms:play-services-ads:9.4.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    freeImplementation 'com.google.android.gms:play-services-ads:15.0.1'
 }
 
 /*
